--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@ nav .fas{
         font-size: 20px;
         margin-left: 10px;
         text-align: center;
+        margin-top: 350px;
     }
     .header-text h1{
         font-size: 30px;
