--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ nav .fas{
     .logo{
         width: 200px;
         margin-top: 10px;
+        margin-left: 10px;
     }
     .header-text{
         margin-top: 100%;
